[package]
name = "destruct-drop"
version = "0.1.0"
description = "Macro for dropping the fields of a struct or enum without dropping the container."
readme = "../README.md"
repository = "https://github.com/OpenByteDev/destruct-drop"
documentation = "https://docs.rs/destruct-drop"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2018"
categories = ["rust-patterns"]
keywords = ["macro", "derive", "drop", "destruct"]

[dependencies]
destruct-drop-derive = { version = "0.1", path = "../destruct-drop-derive" }
